welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:7: error: '(' expected but '{' found.
}else if{
        ^nearHundred:19: error: illegal start of simple expression
}
^